methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:17: error: ';' expected but 'else' found.
  else{ 
  ^